--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -111,7 +111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create our session (link) from Python to the DB\n"
+    "# Create our session (link) from Python to the DB\n",
+    "session = Session(engine)"
    ]
   },
   {
