--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -68,9 +68,9 @@
    "source": [
     "# reflect an existing database into a new model\n",
     "base=automap_base()\n",
-    "base.prepare(engine, reflect=True)\n",
     "\n",
-    "# reflect the tables"
+    "# reflect the tables\n",
+    "base.prepare(engine, reflect=True)"
    ]
   },
   {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,21 +124,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x24e936066c8>,\n",
+       " 'prcp': 0.08,\n",
+       " 'station': 'USC00519397',\n",
+       " 'tobs': 65.0,\n",
+       " 'id': 1,\n",
+       " 'date': '2010-01-01'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
+    "# Display the row's columns and data in dictionary format\n",
+    "first_row_measurement = session.query(measurement).first()\n",
+    "first_row_measurement.__dict__\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x24e93613448>,\n",
+       " 'name': 'WAIKIKI 717.2, HI US',\n",
+       " 'longitude': -157.8168,\n",
+       " 'id': 1,\n",
+       " 'station': 'USC00519397',\n",
+       " 'latitude': 21.2716,\n",
+       " 'elevation': 3.0}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Display the row's columns and data in dictionary format\n",
+    "first_row_station = session.query(station).first()\n",
+    "first_row_station.__dict__"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Design a query to retrieve the last 12 months of precipitation data and plot the results\n",
-    "\n",
     "# Calculate the date 1 year ago from the last data point in the database\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Perform a query to retrieve the data and precipitation scores\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Sort the dataframe by date\n",
-    "\n",
-    "# Use Pandas Plotting with Matplotlib to plot the data\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use Pandas Plotting with Matplotlib to plot the data"
    ]
   },
   {
