--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -1486,11 +1486,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(9)]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Design a query to show how many stations are available in this dataset?\n"
+    "# Design a query to show how many stations are available in this dataset?\n",
+    "stationcount=session.query(func.count(station.station)).all()\n",
+    "stationcount\n",
+    "# lastyear=session.query(measurement.date,measurement.prcp)."
    ]
   },
   {
