--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -130,11 +130,11 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x259c8b7b088>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1bb5c8c9248>,\n",
        " 'station': 'USC00519397',\n",
        " 'prcp': 0.08,\n",
-       " 'date': '2010-01-01',\n",
        " 'id': 1,\n",
+       " 'date': '2010-01-01',\n",
        " 'tobs': 65.0}"
       ]
      },
@@ -158,13 +158,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x259c8b51c08>,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x1bb5c8a2f08>,\n",
        " 'latitude': 21.2716,\n",
        " 'station': 'USC00519397',\n",
        " 'elevation': 3.0,\n",
-       " 'name': 'WAIKIKI 717.2, HI US',\n",
+       " 'longitude': -157.8168,\n",
        " 'id': 1,\n",
-       " 'longitude': -157.8168}"
+       " 'name': 'WAIKIKI 717.2, HI US'}"
       ]
      },
      "execution_count": 11,
@@ -2239,129 +2239,19 @@
     "# may_averages = session.query(*sel).\\\n",
     "#     filter(func.strftime(\"%m\", Dow.date) == \"05\").\\\n",
     "#     group_by(Dow.stock).\\\n",
-    "#     order_by(Dow.stock).all()\n",
-    "           \n",
-    "# Btw, instead of '1985-01-17', you can also use datetime.date(1985, 1, 17) - may be easier to get"
+    "#     order_by(Dow.stock).all()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>prcp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2016-08-23</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2016-08-24</td>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2016-08-25</td>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2016-08-26</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2016-08-27</td>\n",
-       "      <td>0.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2225</th>\n",
-       "      <td>2017-08-19</td>\n",
-       "      <td>0.09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2226</th>\n",
-       "      <td>2017-08-20</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2227</th>\n",
-       "      <td>2017-08-21</td>\n",
-       "      <td>0.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2228</th>\n",
-       "      <td>2017-08-22</td>\n",
-       "      <td>0.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2229</th>\n",
-       "      <td>2017-08-23</td>\n",
-       "      <td>0.45</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2230 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            date  prcp\n",
-       "0     2016-08-23  0.00\n",
-       "1     2016-08-24  0.08\n",
-       "2     2016-08-25  0.08\n",
-       "3     2016-08-26  0.00\n",
-       "4     2016-08-27  0.00\n",
-       "...          ...   ...\n",
-       "2225  2017-08-19  0.09\n",
-       "2226  2017-08-20   NaN\n",
-       "2227  2017-08-21  0.56\n",
-       "2228  2017-08-22  0.50\n",
-       "2229  2017-08-23  0.45\n",
-       "\n",
-       "[2230 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Save the query results as a Pandas DataFrame and set the index to the date column\n",
     "df = pd.DataFrame(lastyear, columns=['date','prcp'])\n",
-    "# df.set_index('date', inplace=True)\n",
-    "df"
+    "index=df.set_index('date', inplace=True)\n",
+    "index"
    ]
   },
   {
@@ -2480,7 +2370,8 @@
    "source": [
     "# Sort the dataframe by date\n",
     "# strongest_pokemon_df = pokemon_comparison_df.sort_values([\"Total\"], ascending=False)\n",
-    "sortdf=df.sort_values(['date'],ascending=True)\n",
+    "sortdf = pd.DataFrame(lastyear, columns=['date','prcp'])\n",
+    "sortdf=sortdf.sort_values(['date'],ascending=True)\n",
     "sortdf"
    ]
   },
@@ -2502,7 +2393,7 @@
    ],
    "source": [
     "# Use Pandas Plotting with Matplotlib to plot the data\n",
-    "# sortdf.set_index('date',inplace=True)\n",
+    "\n",
     "sortdf.plot('date','prcp',figsize=(10,6))\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel(\"Precipitation in Inches\")\n",
@@ -2645,22 +2536,186 @@
     "# Design a query to show how many stations are available in this dataset?\n",
     "stationcount=session.query(func.count(station.station)).all()\n",
     "stationcount\n",
+    "\n",
     "# lastyear=session.query(measurement.date,measurement.prcp)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19545</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-19</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19546</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19547</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-21</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19548</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-22</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19549</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-23</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>76.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19550 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           station        date  prcp  tobs\n",
+       "0      USC00519397  2010-01-01  0.08  65.0\n",
+       "1      USC00519397  2010-01-02  0.00  63.0\n",
+       "2      USC00519397  2010-01-03  0.00  74.0\n",
+       "3      USC00519397  2010-01-04  0.00  76.0\n",
+       "4      USC00519397  2010-01-06   NaN  73.0\n",
+       "...            ...         ...   ...   ...\n",
+       "19545  USC00516128  2017-08-19  0.09  71.0\n",
+       "19546  USC00516128  2017-08-20   NaN  78.0\n",
+       "19547  USC00516128  2017-08-21  0.56  76.0\n",
+       "19548  USC00516128  2017-08-22  0.50  76.0\n",
+       "19549  USC00516128  2017-08-23  0.45  76.0\n",
+       "\n",
+       "[19550 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
+    "# List the stations and the counts in descending order.\n",
+    "# # first_row_station = session.query(station).first()\n",
+    "# # first_row_station.__dict__\n",
+    "# lastyear=session.query(measurement.date,measurement.prcp).\\\n",
+    "#     filter(func.strftime(\"%Y,%m,%d\",measurement.date)>=twelvemonths).all()\n",
+    "allprecip=session.query(measurement.station,measurement.date,measurement.prcp,measurement.tobs)\n",
+    "precip_df=pd.DataFrame(allprecip,columns=['station','date','prcp','tobs'])\n",
+    "precip_df\n",
+    "# stationdata=session.query(station).all()\n",
+    "# stationdata\n",
+    "# # df = pd.DataFrame(lastyear, columns=['date','prcp'])\n",
+    "# station_df=pd.DataFrame(stationdata,columns=['station','name','latitude','longitude','elevation'])\n",
+    "# station_df\n",
+    "\n",
+    "# stationdata=pd.read_sql(\"SELECT * FROM hawaii_stations\",conn)\n",
+    "# stationdata"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allstations=session.query(station.station,station.name,station.latitude,station,longitude,)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2670,7 +2725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2687,22 +2742,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Measurement' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-790a4fe371b5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# function usage example\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcalc_temps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'2012-02-28'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2012-03-05'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-22-790a4fe371b5>\u001b[0m in \u001b[0;36mcalc_temps\u001b[1;34m(start_date, end_date)\u001b[0m\n\u001b[0;32m     12\u001b[0m     \"\"\"\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mavg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mend_date\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Measurement' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, average, and maximum temperatures for that range of dates\n",
