--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2699,11 +2699,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>WAIKIKI 717.2, HI US</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00513117</td>\n",
+       "      <td>KANEOHE 838.1, HI US</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00514830</td>\n",
+       "      <td>KUALOA RANCH HEADQUARTERS 886.9, HI US</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00517948</td>\n",
+       "      <td>PEARL CITY, HI US</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00518838</td>\n",
+       "      <td>UPPER WAHIAWA 874.3, HI US</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>USC00519523</td>\n",
+       "      <td>WAIMANALO EXPERIMENTAL FARM, HI US</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>USC00519281</td>\n",
+       "      <td>WAIHEE 837.5, HI US</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>USC00511918</td>\n",
+       "      <td>HONOLULU OBSERVATORY 702.2, HI US</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       station                                    name  id\n",
+       "0  USC00519397                    WAIKIKI 717.2, HI US   1\n",
+       "1  USC00513117                    KANEOHE 838.1, HI US   2\n",
+       "2  USC00514830  KUALOA RANCH HEADQUARTERS 886.9, HI US   3\n",
+       "3  USC00517948                       PEARL CITY, HI US   4\n",
+       "4  USC00518838              UPPER WAHIAWA 874.3, HI US   5\n",
+       "5  USC00519523      WAIMANALO EXPERIMENTAL FARM, HI US   6\n",
+       "6  USC00519281                     WAIHEE 837.5, HI US   7\n",
+       "7  USC00511918       HONOLULU OBSERVATORY 702.2, HI US   8\n",
+       "8  USC00516128            MANOA LYON ARBO 785.2, HI US   9"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "allstations=session.query(station.station,station.name,station.latitude,station,longitude,)"
+    "allstations=session.query(station.station,station.name,station.id)\n",
+    "allstations_df=pd.DataFrame(allstations,columns=['station','name','id'])\n",
+    "allstations_df"
    ]
   },
   {
