- Merges precipitation dataframe with station dataframe

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2813,10 +2813,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>station</th>\n",
+       "      <th>date</th>\n",
+       "      <th>prcp</th>\n",
+       "      <th>tobs</th>\n",
+       "      <th>name</th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-01</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>WAIKIKI 717.2, HI US</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>WAIKIKI 717.2, HI US</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>WAIKIKI 717.2, HI US</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>WAIKIKI 717.2, HI US</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>USC00519397</td>\n",
+       "      <td>2010-01-06</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>WAIKIKI 717.2, HI US</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19545</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-19</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19546</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19547</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-21</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19548</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-22</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19549</th>\n",
+       "      <td>USC00516128</td>\n",
+       "      <td>2017-08-23</td>\n",
+       "      <td>0.45</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>MANOA LYON ARBO 785.2, HI US</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>19550 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           station        date  prcp  tobs                          name  id\n",
+       "0      USC00519397  2010-01-01  0.08  65.0          WAIKIKI 717.2, HI US   1\n",
+       "1      USC00519397  2010-01-02  0.00  63.0          WAIKIKI 717.2, HI US   1\n",
+       "2      USC00519397  2010-01-03  0.00  74.0          WAIKIKI 717.2, HI US   1\n",
+       "3      USC00519397  2010-01-04  0.00  76.0          WAIKIKI 717.2, HI US   1\n",
+       "4      USC00519397  2010-01-06   NaN  73.0          WAIKIKI 717.2, HI US   1\n",
+       "...            ...         ...   ...   ...                           ...  ..\n",
+       "19545  USC00516128  2017-08-19  0.09  71.0  MANOA LYON ARBO 785.2, HI US   9\n",
+       "19546  USC00516128  2017-08-20   NaN  78.0  MANOA LYON ARBO 785.2, HI US   9\n",
+       "19547  USC00516128  2017-08-21  0.56  76.0  MANOA LYON ARBO 785.2, HI US   9\n",
+       "19548  USC00516128  2017-08-22  0.50  76.0  MANOA LYON ARBO 785.2, HI US   9\n",
+       "19549  USC00516128  2017-08-23  0.45  76.0  MANOA LYON ARBO 785.2, HI US   9\n",
+       "\n",
+       "[19550 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge_df=pd.merge(precip_df,allstations_df,on=\"station\")\n",
+    "merge_df"
+   ]
   },
   {
    "cell_type": "code",
