- Retrieves stations with ID and counts in descending order

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -2678,8 +2678,7 @@
     }
    ],
    "source": [
-    "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n",
+    "\n",
     "# # first_row_station = session.query(station).first()\n",
     "# # first_row_station.__dict__\n",
     "# lastyear=session.query(measurement.date,measurement.prcp).\\\n",
@@ -2975,6 +2974,111 @@
    "source": [
     "merge_df=pd.merge(precip_df,allstations_df,on=\"station\")\n",
     "merge_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>station</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>USC00519281</th>\n",
+       "      <td>2772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00519397</th>\n",
+       "      <td>2724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00513117</th>\n",
+       "      <td>2709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00519523</th>\n",
+       "      <td>2669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00516128</th>\n",
+       "      <td>2612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00514830</th>\n",
+       "      <td>2202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00511918</th>\n",
+       "      <td>1979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00517948</th>\n",
+       "      <td>1372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00518838</th>\n",
+       "      <td>511</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               id\n",
+       "station          \n",
+       "USC00519281  2772\n",
+       "USC00519397  2724\n",
+       "USC00513117  2709\n",
+       "USC00519523  2669\n",
+       "USC00516128  2612\n",
+       "USC00514830  2202\n",
+       "USC00511918  1979\n",
+       "USC00517948  1372\n",
+       "USC00518838   511"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# What are the most active stations? (i.e. what stations have the most rows)?\n",
+    "# List the stations and the counts in descending order.\n",
+    "group_df=merge_df[['station','id']]\n",
+    "\n",
+    "group=group_df.groupby(['station']).count()\n",
+    "group\n",
+    "\n",
+    "sorted_df=group.sort_values(['id'],ascending=False)\n",
+    "sorted_df"
    ]
   },
   {
