- Creates Dataframe showing min, max, and avg temps for most active station

--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -3072,6 +3072,7 @@
    "source": [
     "# What are the most active stations? (i.e. what stations have the most rows)?\n",
     "# List the stations and the counts in descending order.\n",
+    "\n",
     "group_df=merge_df[['station','id']]\n",
     "\n",
     "group=group_df.groupby(['station']).count()\n",
@@ -3083,12 +3084,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "</style><table id=\"T_40533b6c_2243_11eb_9820_94e6f72001c4\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Minimum Temp</th>        <th class=\"col_heading level0 col1\" >Maximum Temp</th>        <th class=\"col_heading level0 col2\" >Average Temp</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                                <td id=\"T_40533b6c_2243_11eb_9820_94e6f72001c4row0_col0\" class=\"data row0 col0\" >54.000000</td>\n",
+       "                        <td id=\"T_40533b6c_2243_11eb_9820_94e6f72001c4row0_col1\" class=\"data row0 col1\" >85.000000</td>\n",
+       "                        <td id=\"T_40533b6c_2243_11eb_9820_94e6f72001c4row0_col2\" class=\"data row0 col2\" >71.663781</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1bb5eae7688>"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Using the station id from the previous query, calculate the lowest temperature recorded, \n",
-    "# highest temperature recorded, and average temperature of the most active station?\n"
+    "# highest temperature recorded, and average temperature of the most active station?\n",
+    "temp=merge_df[['id','tobs','station']]\n",
+    "\n",
+    "lowesttemp=temp.loc[(temp['station']=='USC00519281')]\n",
+    "lowesttemp_min=lowesttemp['tobs'].min()\n",
+    "lowesttemp_max=lowesttemp['tobs'].max()\n",
+    "lowesttemp_avg=lowesttemp['tobs'].mean()\n",
+    "analysis=pd.DataFrame({\"Minimum Temp\":[lowesttemp_min],\"Maximum Temp\":[lowesttemp_max],\"Average Temp\":[lowesttemp_avg]})\n",
+    "analysis\n",
+    "analysis.style.hide_index()"
    ]
   },
   {
