--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -130,12 +130,12 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x2a0aedc9248>,\n",
-       " 'prcp': 0.08,\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x22de491a188>,\n",
        " 'station': 'USC00519397',\n",
-       " 'tobs': 65.0,\n",
+       " 'prcp': 0.08,\n",
+       " 'date': '2010-01-01',\n",
        " 'id': 1,\n",
-       " 'date': '2010-01-01'}"
+       " 'tobs': 65.0}"
       ]
      },
      "execution_count": 10,
@@ -158,13 +158,13 @@
     {
      "data": {
       "text/plain": [
-       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x2a0aeda1d88>,\n",
-       " 'name': 'WAIKIKI 717.2, HI US',\n",
-       " 'longitude': -157.8168,\n",
-       " 'id': 1,\n",
-       " 'station': 'USC00519397',\n",
+       "{'_sa_instance_state': <sqlalchemy.orm.state.InstanceState at 0x22de491ec48>,\n",
        " 'latitude': 21.2716,\n",
-       " 'elevation': 3.0}"
+       " 'station': 'USC00519397',\n",
+       " 'elevation': 3.0,\n",
+       " 'longitude': -157.8168,\n",
+       " 'name': 'WAIKIKI 717.2, HI US',\n",
+       " 'id': 1}"
       ]
      },
      "execution_count": 11,
@@ -2372,7 +2372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -3052,16 +3052,16 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_4f38ead0_2247_11eb_9dd0_94e6f72001c4\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Minimum Temp</th>        <th class=\"col_heading level0 col1\" >Maximum Temp</th>        <th class=\"col_heading level0 col2\" >Average Temp</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_e8d835d0_2384_11eb_a51e_94e6f72001c4\" ><thead>    <tr>        <th class=\"col_heading level0 col0\" >Minimum Temp</th>        <th class=\"col_heading level0 col1\" >Maximum Temp</th>        <th class=\"col_heading level0 col2\" >Average Temp</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                                <td id=\"T_4f38ead0_2247_11eb_9dd0_94e6f72001c4row0_col0\" class=\"data row0 col0\" >54.000000</td>\n",
-       "                        <td id=\"T_4f38ead0_2247_11eb_9dd0_94e6f72001c4row0_col1\" class=\"data row0 col1\" >85.000000</td>\n",
-       "                        <td id=\"T_4f38ead0_2247_11eb_9dd0_94e6f72001c4row0_col2\" class=\"data row0 col2\" >71.663781</td>\n",
+       "                                <td id=\"T_e8d835d0_2384_11eb_a51e_94e6f72001c4row0_col0\" class=\"data row0 col0\" >54.000000</td>\n",
+       "                        <td id=\"T_e8d835d0_2384_11eb_a51e_94e6f72001c4row0_col1\" class=\"data row0 col1\" >85.000000</td>\n",
+       "                        <td id=\"T_e8d835d0_2384_11eb_a51e_94e6f72001c4row0_col2\" class=\"data row0 col2\" >71.663781</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x2a0b0fa37c8>"
+       "<pandas.io.formats.style.Styler at 0x22de6b77788>"
       ]
      },
      "execution_count": 23,
@@ -3098,7 +3098,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x000002A0B0D83EC8>]],\n",
+       "array([[<matplotlib.axes._subplots.AxesSubplot object at 0x0000022DE6B6AE08>]],\n",
        "      dtype=object)"
       ]
      },
@@ -3130,147 +3130,6 @@
     "lstyr=highest_no.loc[(highest_no['date']>='2016-08-23')&(highest_no['station']=='USC00519281')]\n",
     "\n",
     "lstyr.hist(column='tobs')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Bonus Challenge Assignment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Measurement' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-790a4fe371b5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[1;31m# function usage example\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcalc_temps\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'2012-02-28'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'2012-03-05'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-25-790a4fe371b5>\u001b[0m in \u001b[0;36mcalc_temps\u001b[1;34m(start_date, end_date)\u001b[0m\n\u001b[0;32m     12\u001b[0m     \"\"\"\n\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[1;32mreturn\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mavg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m         \u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[0mstart_date\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mMeasurement\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdate\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mend_date\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'Measurement' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# This function called `calc_temps` will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
-    "def calc_temps(start_date, end_date):\n",
-    "    \"\"\"TMIN, TAVG, and TMAX for a list of dates.\n",
-    "    \n",
-    "    Args:\n",
-    "        start_date (string): A date string in the format %Y-%m-%d\n",
-    "        end_date (string): A date string in the format %Y-%m-%d\n",
-    "        \n",
-    "    Returns:\n",
-    "        TMIN, TAVE, and TMAX\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    return session.query(func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)).\\\n",
-    "        filter(Measurement.date >= start_date).filter(Measurement.date <= end_date).all()\n",
-    "\n",
-    "# function usage example\n",
-    "print(calc_temps('2012-02-28', '2012-03-05'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use your previous function `calc_temps` to calculate the tmin, tavg, and tmax \n",
-    "# for your trip using the previous year's data for those same dates.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot the results from your previous query as a bar chart. \n",
-    "# Use \"Trip Avg Temp\" as your Title\n",
-    "# Use the average temperature for the y value\n",
-    "# Use the peak-to-peak (tmax-tmin) value as the y error bar (yerr)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate the total amount of rainfall per weather station for your trip dates using the previous year's matching dates.\n",
-    "# Sort this in descending order by precipitation amount and list the station, name, latitude, longitude, and elevation\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a query that will calculate the daily normals \n",
-    "# (i.e. the averages for tmin, tmax, and tavg for all historic data matching a specific month and day)\n",
-    "\n",
-    "def daily_normals(date):\n",
-    "    \"\"\"Daily Normals.\n",
-    "    \n",
-    "    Args:\n",
-    "        date (str): A date string in the format '%m-%d'\n",
-    "        \n",
-    "    Returns:\n",
-    "        A list of tuples containing the daily normals, tmin, tavg, and tmax\n",
-    "    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
-    "    return session.query(*sel).filter(func.strftime(\"%m-%d\", Measurement.date) == date).all()\n",
-    "    \n",
-    "daily_normals(\"01-01\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# calculate the daily normals for your trip\n",
-    "# push each tuple of calculations into a list called `normals`\n",
-    "\n",
-    "# Set the start and end date of the trip\n",
-    "\n",
-    "# Use the start and end date to create a range of dates\n",
-    "\n",
-    "# Stip off the year and save a list of %m-%d strings\n",
-    "\n",
-    "# Loop through the list of %m-%d strings and calculate the normals for each date\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the previous query results into a Pandas DataFrame and add the `trip_dates` range as the `date` index\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Plot the daily normals as an area plot with `stacked=False`\n"
    ]
   }
  ],
